<resources>
    <string name="app_name">ViewModelRoomJoseph</string>
    <string name="name">Name</string>
    <string name="description">description</string>
    <string name="calendar">Calendar</string>
    <string name="date">Date</string>
    <string name="add">add</string>
    <string name="barra">/</string>
    <string name="datepicker">datepicker</string>
    <string name="show">show</string>
    <string name="del">delete</string>
    <string name="id">ID</string>
    <string name="heroe">heroe</string>
    <string name="list">Heroes</string>
    <string name="itemDatabase">item_database</string>
    <string name="confirmarSerie">Serie añadida</string>
    <string name="confirmarComic">Comic añadido</string>
    <string name="confirmarHeroe">Heroe añadido</string>
    <string name="comics">Comics</string>
    <string name="series">Series</string>
    <string name="Update">Update</string>
    <string name="aviso">Tienes que rellenar el nombre, la descripcion y la fecha</string>
    <string name="elements">Elements</string>
    <string name="dateField">Date</string>
    <string name="formato">dd/MM/yyyy</string>
    <string name="actualizado">Heroe actualizado</string>
    <string name="cero">0</string>
    <string name="db">hero_database</string>
    <string name="confirmacion">Confirmación</string>
    <string name="pregunta">¿Quieres borrar el heroe?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="guardar">Guardar</string>
    <string name="heroes">Heroes</string>
</resources>